# PureQL

./: .gitignore  CONTRIBUTING.md  LICENSE  README copy.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
core/: pyproject.toml
core/pureql/: __init__.py  bridge.py  server.py
core/pureql/ai/: __init__.py  cloud_providers.py  interpreter.py  keychain.py  ollama_client.py
core/pureql/cleaning/: __init__.py  ml_imputation.py  pipeline_exporter.py  semantic_dedup.py
core/pureql/database/: __init__.py
core/pureql/ingestion/: __init__.py  loader.py
core/pureql/profiling/: __init__.py  profiler.py
core/pureql/sql/: __init__.py
core/pureql/versioning/: __init__.py
core/tests/: test_ai.py  test_bridge.py  test_cleaning_sql_versioning.py  test_core.py  test_database.py  test_new_features.py
scripts/: start_bridge.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/chat/: ChatPanel.tsx
src/components/database/: DatabaseModal.tsx
src/components/datasets/: DatasetManager.tsx
src/components/export/: ExportDialog.tsx
src/components/layout/: AppLayout.tsx  FileDropZone.tsx
src/components/models/: ModelsPanel.tsx
src/components/onboarding/: OnboardingWizard.tsx
src/components/preview/: DataPreview.tsx  DiffPanel.tsx  MiniPreview.tsx  StatsPanel.tsx
src/components/settings/: SettingsPanel.tsx
src/components/shared/: DataTable.tsx
src/hooks/: useBridge.ts
src/lib/: api.ts
src/stores/: appStore.ts  appStore.ts.bak
(+2 files in other folders)
