[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pureql-core"
version = "0.1.0"
description = "Core engine for PureQL — data cleaning + SQL optimization"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "polars>=1.0.0",
    "duckdb>=1.0.0",
    "sqlalchemy>=2.0.0",
    "sqlglot>=23.0.0",
    "rapidfuzz>=3.0.0",
    "scikit-learn>=1.5.0",
    "pyarrow>=15.0.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]
ai = [
    "ollama>=0.3.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
]
all = [
    "pureql-core[dev,ai]",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
