[package]
name = "pureql"
version = "0.1.0"
description = "Desktop app with local AI for data cleaning + SQL optimization"
authors = ["PureQL Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38.3"
which = "8.0.1"
